src/css/_layout.scss
@import "variables";

body {
  margin: 0;
  padding: 0;
  overflow-x: hidden;
  hyphens: auto;
}

.cjwlogo {
  position: relative;
  top: 1rem;
  left: 1rem;
  margin-bottom: 3rem;

  img {
    height: 5rem;
    max-width: 60%;
  }

  @media screen and (min-width: $md-min) {
    top: 2rem;
    left: 2rem;
    margin-bottom: 4rem;
  }
  @media screen and (min-width: $lg-min) {
    margin-bottom: 6rem;
  }
  @media screen and (min-width: $xl-min) {
    margin-bottom: 8rem;
  }
}

.language {
  position: absolute;
  top: 1rem;
  right: 1rem;
  color: var(--white);
  z-index: 2;
  @media screen and (min-width: $md-min) {
    top: 2rem;
    right: 2rem;
  }
  a {
    color: var(--white);
  }
}


main {
  padding-bottom: 2rem;
}

.container {
  width: 90%;
  margin: 0 auto;
  max-width: $xl-max;
  @media screen and (min-width: $md-min) {
    width: 75%;
    margin: 0 auto;
  }
}

.cta {
  text-align: center;
  margin: 4rem auto;
}

footer {
  margin: 4rem 0;
}

